configuring logs to go in stdout to be able to see them on heroku

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,9 @@
             </configuration>
           </execution>
         </executions>
+        <configuration>
+          <conf>src/main/meecrowave/conf</conf>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
