--- a/pom.xml
+++ b/pom.xml
@@ -55,13 +55,9 @@
       <artifactId>commons-cli</artifactId>
       <version>1.4</version>
     </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>2.9.2</version>
-    </dependency>
 
 
+    <!-- test -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
